--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-/Phase 0 - Binary Classification Between Lungs & Liver Cells/data
-/Phase 0 - Binary Classification Between Lungs & Liver Cells/slides
+/Phase_0/data
+/Phase_0/slides
